--- a/index.html
+++ b/index.html
@@ -7,27 +7,21 @@
   <style>
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial; margin:0; background:#f6f7fb; color:#111}
     .wrap{max-width:820px; margin:24px auto; padding:16px}
-    .card{background:#fff; border:1px solid #e8e8ef; border-radius:14px; padding:18px; box-shadow:0 6px 18px rgba(0,0,0,.04)}
+    .card{background:#fff; border:1px solid #e8e8ef; border-radius:14px; padding:18px}
     h1{margin:0 0 10px; font-size:20px}
-    .sub{margin:0 0 16px; color:#666; font-size:13px; line-height:1.7}
-    .tabs{display:flex; gap:10px; flex-wrap:wrap; margin:14px 0 10px}
-    .tab{border:1px solid #ddd; background:#fff; padding:10px 12px; border-radius:10px; cursor:pointer}
+    .tabs{display:flex; gap:10px; margin:14px 0}
+    .tab{border:1px solid #ddd; padding:10px 12px; border-radius:10px; cursor:pointer}
     .tab.active{background:#111; color:#fff}
     .panel{display:none}
     .panel.active{display:block}
-    label{display:block; font-size:13px; margin:12px 0 6px}
-    input{width:100%; padding:12px; border:1px solid #ddd; border-radius:10px; font-size:16px}
+    label{display:block; margin:10px 0 6px}
+    input{width:100%; padding:12px; border:1px solid #ddd; border-radius:10px}
     .row{display:grid; gap:12px}
     @media(min-width:760px){.row{grid-template-columns:1fr 1fr 1fr}}
     .result{margin-top:16px; padding:14px; border-radius:12px; background:#f4f6ff}
-    .result div{display:flex; justify-content:space-between; padding:6px 0}
+    .result div{display:flex; justify-content:space-between}
     .big{font-weight:800; font-size:20px}
     .footer{margin-top:14px; font-size:12px; color:#666}
-    .name{font-weight:700}
-    button{padding:10px 12px; border-radius:10px; border:0; cursor:pointer}
-    .primary{background:#111; color:#fff}
-    .ghost{background:#fff; border:1px solid #ddd}
-    .btns{display:flex; gap:10px; margin-top:14px}
   </style>
 </head>
 
@@ -43,34 +37,25 @@
 
 <!-- TAB 1 -->
 <div class="panel active" id="tab1">
-<p class="sub">(الوزن×المصنعية) + (الوزن×سعر الذهب) = بدون ضريبة × 1.1 = النهائي</p>
 <div class="row">
-  <div><label>الوزن (غرام)</label><input id="g1" type="number"></div>
-  <div><label>المصنعية لكل غرام</label><input id="m1" type="number"></div>
-  <div><label>سعر الذهب اليوم</label><input id="p1" type="number"></div>
+  <div><label>الوزن (غرام)</label><input id="g1" type="number" required></div>
+  <div><label>المصنعية لكل غرام</label><input id="m1" type="number" required></div>
+  <div><label>سعر الذهب اليوم</label><input id="p1" type="number" required></div>
 </div>
+
 <div class="result">
-  <div><span>بدون ضريبة</span><strong id="noVat1">—</strong></div>
-  <div><span>الضريبة</span><strong id="vat1">—</strong></div>
-  <div class="big"><span>السعر النهائي</span><strong id="final1">—</strong></div>
-</div>
-<div class="btns">
-<button class="ghost" onclick="reset1()">مسح</button>
+  <div><span>بدون ضريبة</span><strong id="noVat1">—</strong> دينار</div>
+  <div><span>الضريبة</span><strong id="vat1">—</strong> دينار</div>
+  <div class="big"><span>السعر النهائي</span><strong id="final1">—</strong> دينار</div>
 </div>
 </div>
 
 <!-- TAB 2 -->
 <div class="panel" id="tab2">
-<p class="sub">
-بدون ضريبة = النهائي ÷ 1.1<br>
-سعر الذهب بدون مصنعية = سعر الذهب × الوزن<br>
-المصنعية/غرام = (بدون ضريبة − سعر الذهب بدون مصنعية) ÷ الوزن
-</p>
-
 <div class="row">
-  <div><label>السعر النهائي</label><input id="final2" type="number"></div>
-  <div><label>الوزن (غرام)</label><input id="g2" type="number"></div>
-  <div><label>سعر الذهب اليوم</label><input id="p2" type="number"></div>
+  <div><label>السعر النهائي</label><input id="final2" type="number" required></div>
+  <div><label>الوزن (غرام)</label><input id="g2" type="number" required></div>
+  <div><label>سعر الذهب اليوم</label><input id="p2" type="number" required></div>
 </div>
 
 <div class="result">
@@ -78,16 +63,12 @@
   <div><span>سعر الذهب بدون مصنعية</span><strong id="goldNoManu2">—</strong></div>
   <div class="big">
     <span>المصنعية لكل غرام</span>
-    <strong id="manu2">—</strong> <span>دينار</span>
+    <strong id="manu2">—</strong> دينار
   </div>
 </div>
-
-<div class="btns">
-<button class="ghost" onclick="reset2()">مسح</button>
-</div>
 </div>
 
-<div class="footer">إعداد: <span class="name">Amani Alderazi</span></div>
+<div class="footer">إعداد: <strong>Amani Alderazi</strong></div>
 </div>
 </div>
 
@@ -97,32 +78,37 @@ function showTab(n){
   document.getElementById("tab2").classList.remove("active");
   document.querySelectorAll(".tab")[0].classList.remove("active");
   document.querySelectorAll(".tab")[1].classList.remove("active");
-
   document.getElementById("tab"+n).classList.add("active");
   document.querySelectorAll(".tab")[n-1].classList.add("active");
 }
 
-function f(n){return Number(n||0).toLocaleString("en-US",{minimumFractionDigits:2})}
+function f(n){return Number(n).toLocaleString("en-US",{minimumFractionDigits:2})}
 
-setInterval(()=>{
-  let g=+g1.value||0,m=+m1.value||0,p=+p1.value||0;
+// TAB 1
+function calc1(){
+  let g=g1.value, m=m1.value, p=p1.value;
+  if(!g || !m || !p){ return; }
   let noVat=(g*m)+(g*p);
   let final=noVat*1.1;
   noVat1.textContent=f(noVat);
   vat1.textContent=f(final-noVat);
   final1.textContent=f(final);
+}
 
-  let F=+final2.value||0,G=+g2.value||0,P=+p2.value||0;
+// TAB 2
+function calc2(){
+  let F=final2.value, G=g2.value, P=p2.value;
+  if(!F || !G || !P){ return; }
   let noVatB=F/1.1;
   let goldNo=P*G;
   let manu=(noVatB-goldNo)/G;
   noVat2.textContent=f(noVatB);
   goldNoManu2.textContent=f(goldNo);
   manu2.textContent=f(manu);
-},300);
+}
 
-function reset1(){g1.value="";m1.value="";p1.value="";}
-function reset2(){final2.value="";g2.value="";p2.value="";}
+[g1,m1,p1].forEach(i=>i.addEventListener("input",calc1));
+[final2,g2,p2].forEach(i=>i.addEventListener("input",calc2));
 </script>
 </body>
 </html>
