--- a/index.html
+++ b/index.html
@@ -138,6 +138,33 @@ function copy2(){
   navigator.clipboard.writeText(txt);
   alert("تم النسخ");
 }
+  <div class="footer">
+  إعداد: <strong>Amani Alderazi</strong>
+
+  <div class="social">
+    <!-- SNAPCHAT -->
+    <a href="https://www.snapchat.com/add/dramani_photo" target="_blank" rel="noopener">
+      <!-- Icon -->
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <path fill="currentColor"
+          d="M12 2c3.2 0 5.3 2.5 5.3 5.5v3.2c0 .6.2.9.7 1.2.4.2 1 .4 1.4.6.7.3 1.1.7 1.1 1.2 0 .4-.3.7-.8.9-.8.3-1.6.4-2.2.6-.4.1-.7.3-.8.7-.2.8.5 1.6 1.7 2 .6.2 1.1.4 1.1 1 0 .5-.4.8-1 .9-.9.2-1.7.3-2.4.4-.7.1-1.1.5-1.4 1.1-.4.9-1.4 1.5-2.4 1.5-.6 0-1.1-.1-1.6-.3-.5-.2-1-.3-1.5-.3s-1 .1-1.5.3c-.5.2-1 .3-1.6.3-1 0-2-.6-2.4-1.5-.3-.6-.7-1-1.4-1.1-.7-.1-1.5-.2-2.4-.4-.6-.1-1-.4-1-.9 0-.6.5-.8 1.1-1 1.2-.4 1.9-1.2 1.7-2-.1-.4-.4-.6-.8-.7-.6-.2-1.4-.3-2.2-.6-.5-.2-.8-.5-.8-.9 0-.5.4-.9 1.1-1.2.4-.2 1-.4 1.4-.6.5-.3.7-.6.7-1.2V7.5C6.7 4.5 8.8 2 12 2z"/>
+      </svg>
+      <span>سناب</span>
+      <span class="hint">@dramani_photo</span>
+    </a>
+
+    <!-- TIKTOK -->
+    <a href="https://www.tiktok.com/@dr.amani92" target="_blank" rel="noopener">
+      <!-- Icon -->
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <path fill="currentColor"
+          d="M16.8 3c.4 2.3 1.8 3.8 4 4.1v3.1c-1.6 0-3-.5-4.1-1.4v7.2c0 3.7-3 6.7-6.7 6.7S3.3 19.7 3.3 16 6.3 9.3 10 9.3c.3 0 .6 0 .9.1v3.3c-.3-.1-.6-.2-.9-.2-1.8 0-3.4 1.5-3.4 3.4s1.5 3.4 3.4 3.4 3.4-1.5 3.4-3.4V3h3.4z"/>
+      </svg>
+      <span>تيك توك</span>
+      <span class="hint">@dr.amani92</span>
+    </a>
+  </div>
+</div>
 </script>
 </body>
 </html>
