--- a/index.html
+++ b/index.html
@@ -4,34 +4,47 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>حاسبة الذهب — Amani Alderazi</title>
+
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial; margin:0; background:#f6f7fb; color:#111}
-    .wrap{max-width:820px; margin:24px auto; padding:16px}
-    .card{background:#fff; border:1px solid #e8e8ef; border-radius:14px; padding:18px}
-    h1{margin:0 0 10px; font-size:20px}
-    .tabs{display:flex; gap:10px; margin:14px 0}
-    .tab{border:1px solid #ddd; padding:10px 12px; border-radius:10px; cursor:pointer}
-    .tab.active{background:#111; color:#fff}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;margin:0;background:#f6f7fb;color:#111}
+    .wrap{max-width:820px;margin:24px auto;padding:16px}
+    .card{background:#fff;border:1px solid #e8e8ef;border-radius:14px;padding:18px}
+    h1{margin:0 0 10px;font-size:22px}
+    .tabs{display:flex;gap:10px;margin:14px 0}
+    .tab{border:1px solid #ddd;padding:10px 12px;border-radius:10px;cursor:pointer}
+    .tab.active{background:#111;color:#fff}
     .panel{display:none}
     .panel.active{display:block}
-    label{display:block; margin:10px 0 6px}
-    input{width:100%; padding:12px; border:1px solid #ddd; border-radius:10px}
-    .row{display:grid; gap:12px}
+    label{display:block;margin:10px 0 6px}
+    input{width:100%;padding:12px;border:1px solid #ddd;border-radius:10px;font-size:16px}
+    .row{display:grid;gap:12px}
     @media(min-width:760px){.row{grid-template-columns:1fr 1fr 1fr}}
-    .result{margin-top:16px; padding:14px; border-radius:12px; background:#f4f6ff}
-    .result div{display:flex; justify-content:space-between}
-    .big{font-weight:800; font-size:20px}
-    .btns{display:flex; gap:10px; margin-top:12px}
-    button{padding:10px 12px; border-radius:10px; border:0; cursor:pointer}
-    .primary{background:#111; color:#fff}
-    .ghost{background:#fff; border:1px solid #ddd}
-    .footer{margin-top:14px; font-size:12px; color:#666}
+    .result{margin-top:16px;padding:14px;border-radius:12px;background:#f4f6ff}
+    .result div{display:flex;justify-content:space-between}
+    .big{font-weight:800;font-size:20px}
+    .btns{display:flex;gap:10px;margin-top:12px}
+    button{padding:10px 14px;border-radius:10px;border:0;cursor:pointer}
+    .primary{background:#111;color:#fff}
+    .ghost{background:#fff;border:1px solid #ddd}
+    .footer{margin-top:20px;font-size:12px;color:#666}
+    
+    /* Social Buttons */
+    .social{margin-top:14px;display:flex;gap:10px;flex-wrap:wrap}
+    .social a{
+      display:inline-flex;align-items:center;gap:10px;
+      padding:10px 14px;border-radius:12px;
+      background:#111;color:#fff;text-decoration:none;
+      font-size:14px;border:1px solid #111
+    }
+    .social svg{width:18px;height:18px}
+    .hint{opacity:.8;font-size:12px}
   </style>
 </head>
 
 <body>
 <div class="wrap">
 <div class="card">
+
 <h1>حاسبة الذهب</h1>
 
 <div class="tabs">
@@ -82,7 +95,25 @@
 </div>
 </div>
 
-<div class="footer">إعداد: <strong>Amani Alderazi</strong></div>
+<!-- FOOTER + SOCIAL -->
+<div class="footer">
+  إعداد: <strong>Amani Alderazi</strong>
+
+  <div class="social">
+    <a href="https://www.snapchat.com/add/dramani_photo" target="_blank">
+      <svg viewBox="0 0 24 24"><path fill="currentColor"
+      d="M12 2c3.2 0 5.3 2.5 5.3 5.5v3.2c0 .6.2.9.7 1.2.4.2 1 .4 1.4.6.7.3 1.1.7 1.1 1.2 0 .4-.3.7-.8.9-.8.3-1.6.4-2.2.6-.4.1-.7.3-.8.7-.2.8.5 1.6 1.7 2 .6.2 1.1.4 1.1 1 0 .5-.4.8-1 .9-.9.2-1.7.3-2.4.4-.7.1-1.1.5-1.4 1.1-.4.9-1.4 1.5-2.4 1.5-.6 0-1.1-.1-1.6-.3-.5-.2-1-.3-1.5-.3s-1 .1-1.5.3c-.5.2-1 .3-1.6.3-1 0-2-.6-2.4-1.5-.3-.6-.7-1-1.4-1.1-.7-.1-1.5-.2-2.4-.4-.6-.1-1-.4-1-.9 0-.6.5-.8 1.1-1 1.2-.4 1.9-1.2 1.7-2-.1-.4-.4-.6-.8-.7-.6-.2-1.4-.3-2.2-.6-.5-.2-.8-.5-.8-.9 0-.5.4-.9 1.1-1.2.4-.2 1-.4 1.4-.6.5-.3.7-.6.7-1.2V7.5C6.7 4.5 8.8 2 12 2z"/></svg>
+      سناب <span class="hint">@dramani_photo</span>
+    </a>
+
+    <a href="https://www.tiktok.com/@dr.amani92" target="_blank">
+      <svg viewBox="0 0 24 24"><path fill="currentColor"
+      d="M16.8 3c.4 2.3 1.8 3.8 4 4.1v3.1c-1.6 0-3-.5-4.1-1.4v7.2c0 3.7-3 6.7-6.7 6.7S3.3 19.7 3.3 16 6.3 9.3 10 9.3c.3 0 .6 0 .9.1v3.3c-.3-.1-.6-.2-.9-.2-1.8 0-3.4 1.5-3.4 3.4s1.5 3.4 3.4 3.4 3.4-1.5 3.4-3.4V3h3.4z"/></svg>
+      تيك توك <span class="hint">@dr.amani92</span>
+    </a>
+  </div>
+</div>
+
 </div>
 </div>
 
@@ -101,7 +132,7 @@ function f(n){return Number(n).toLocaleString("en-US",{minimumFractionDigits:2})
 // TAB 1
 function calc1(){
   let g=g1.value, m=m1.value, p=p1.value;
-  if(!g || !m || !p){ return; }
+  if(!g||!m||!p) return;
   let noVat=(g*m)+(g*p);
   let final=noVat*1.1;
   noVat1.textContent=f(noVat);
@@ -112,7 +143,7 @@ function calc1(){
 // TAB 2
 function calc2(){
   let F=final2.value, G=g2.value, P=p2.value;
-  if(!F || !G || !P){ return; }
+  if(!F||!G||!P) return;
   let noVatB=F/1.1;
   let goldNo=P*G;
   let manu=(noVatB-goldNo)/G;
@@ -128,43 +159,26 @@ function reset1(){g1.value="";m1.value="";p1.value="";noVat1.textContent=vat1.te
 function reset2(){final2.value="";g2.value="";p2.value="";noVat2.textContent=goldNoManu2.textContent=manu2.textContent="—";}
 
 function copy1(){
-  let txt=`الوزن: ${g1.value}\nالمصنعية/غرام: ${m1.value}\nسعر الذهب: ${p1.value}\nبدون ضريبة: ${noVat1.textContent} دينار\nالضريبة: ${vat1.textContent} دينار\nالسعر النهائي: ${final1.textContent} دينار`;
+  let txt=`الوزن: ${g1.value}
+المصنعية/غرام: ${m1.value}
+سعر الذهب: ${p1.value}
+بدون ضريبة: ${noVat1.textContent} دينار
+الضريبة: ${vat1.textContent} دينار
+السعر النهائي: ${final1.textContent} دينار`;
   navigator.clipboard.writeText(txt);
   alert("تم النسخ");
 }
 
 function copy2(){
-  let txt=`السعر النهائي: ${final2.value}\nالوزن: ${g2.value}\nسعر الذهب: ${p2.value}\nبدون ضريبة: ${noVat2.textContent}\nسعر الذهب بدون مصنعية: ${goldNoManu2.textContent}\nالمصنعية لكل غرام: ${manu2.textContent} دينار`;
+  let txt=`السعر النهائي: ${final2.value}
+الوزن: ${g2.value}
+سعر الذهب: ${p2.value}
+بدون ضريبة: ${noVat2.textContent}
+سعر الذهب بدون مصنعية: ${goldNoManu2.textContent}
+المصنعية لكل غرام: ${manu2.textContent} دينار`;
   navigator.clipboard.writeText(txt);
   alert("تم النسخ");
 }
-  <div class="footer">
-  إعداد: <strong>Amani Alderazi</strong>
-
-  <div class="social">
-    <!-- SNAPCHAT -->
-    <a href="https://www.snapchat.com/add/dramani_photo" target="_blank" rel="noopener">
-      <!-- Icon -->
-      <svg viewBox="0 0 24 24" aria-hidden="true">
-        <path fill="currentColor"
-          d="M12 2c3.2 0 5.3 2.5 5.3 5.5v3.2c0 .6.2.9.7 1.2.4.2 1 .4 1.4.6.7.3 1.1.7 1.1 1.2 0 .4-.3.7-.8.9-.8.3-1.6.4-2.2.6-.4.1-.7.3-.8.7-.2.8.5 1.6 1.7 2 .6.2 1.1.4 1.1 1 0 .5-.4.8-1 .9-.9.2-1.7.3-2.4.4-.7.1-1.1.5-1.4 1.1-.4.9-1.4 1.5-2.4 1.5-.6 0-1.1-.1-1.6-.3-.5-.2-1-.3-1.5-.3s-1 .1-1.5.3c-.5.2-1 .3-1.6.3-1 0-2-.6-2.4-1.5-.3-.6-.7-1-1.4-1.1-.7-.1-1.5-.2-2.4-.4-.6-.1-1-.4-1-.9 0-.6.5-.8 1.1-1 1.2-.4 1.9-1.2 1.7-2-.1-.4-.4-.6-.8-.7-.6-.2-1.4-.3-2.2-.6-.5-.2-.8-.5-.8-.9 0-.5.4-.9 1.1-1.2.4-.2 1-.4 1.4-.6.5-.3.7-.6.7-1.2V7.5C6.7 4.5 8.8 2 12 2z"/>
-      </svg>
-      <span>سناب</span>
-      <span class="hint">@dramani_photo</span>
-    </a>
-
-    <!-- TIKTOK -->
-    <a href="https://www.tiktok.com/@dr.amani92" target="_blank" rel="noopener">
-      <!-- Icon -->
-      <svg viewBox="0 0 24 24" aria-hidden="true">
-        <path fill="currentColor"
-          d="M16.8 3c.4 2.3 1.8 3.8 4 4.1v3.1c-1.6 0-3-.5-4.1-1.4v7.2c0 3.7-3 6.7-6.7 6.7S3.3 19.7 3.3 16 6.3 9.3 10 9.3c.3 0 .6 0 .9.1v3.3c-.3-.1-.6-.2-.9-.2-1.8 0-3.4 1.5-3.4 3.4s1.5 3.4 3.4 3.4 3.4-1.5 3.4-3.4V3h3.4z"/>
-      </svg>
-      <span>تيك توك</span>
-      <span class="hint">@dr.amani92</span>
-    </a>
-  </div>
-</div>
 </script>
 </body>
 </html>
